[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peeringdb-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "tomli-w>=1.0.0",
    "httpx>=0.27.0",
    "starlette>=0.40.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
peeringdb-mcp = "peeringdb_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/peeringdb_mcp"]
